# resume_repo

./: SOUL.md  bangdream-ksm-shooter.html  bangdream-lianliankan.html  bangdream-sakiko-soyo-lianliankan.html
bangdream-arcade/: README.md  index.html
bangdream-arcade/css/: game.css
bangdream-arcade/js/: audio.js  config.js  game.js
bangdream-rhythm/: README.md  index.html
bangdream-rhythm/css/: style.css
bangdream-rhythm/js/: game.js
repopilot/: .env.example  .gitignore  README.md  pyproject.toml
repopilot/artifacts/: branch_name.txt  patch_preview.diff  pr_draft.md  summary.md
repopilot/configs/: agents.yaml
repopilot/docs/: ROADMAP.md
repopilot/src/repopilot/: agents.py  artifacts.py  github.py  llm.py  main.py  pr.py  repo_context.py  summary.py  workflow.py
repopilot/src/repopilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
repopilot/tests/: test_github_parse.py  test_workflow.py
